Fix bug with scrollbar

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,7 +1,1 @@
 @import 'nib'
-
-.mirror
-	display block
-	-moz-transform matrix(-1, 0, 0, 1, 0, 0)
-	-webkit-transform matrix(-1, 0, 0, 1, 0, 0)
-	-o-transform matrix(-1, 0, 0, 1, 0, 0)
